ingress/ingress.yaml
#Create a new Ingress resource called world for domain name world.universe.mine . The domain points to the K8s Node IP via /etc/hosts .
#The Ingress resource should have two routes pointing to the existing Services:
#http://world.universe.mine:30080/europe/
#and
#http://world.universe.mine:30080/asia/

# check namespaces

controlplane $ k apply -f ingress.yaml 
ingress.networking.k8s.io/world created
controlplane $ cat ingress.yaml 
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: world
  namespace: world
spec:
  ingressClassName: nginx
  rules:
  - host: "world.universe.mine"
    http:
      paths:
      - pathType: Prefix
        path: "/europe"
        backend:
          service:
            name: europe
            port:
              number: 80
  - host: "world.universe.mine"
    http:
      paths:
      - pathType: Prefix
        path: "/asia"
        backend:
          service:
            name: asia
            port:
              number: 80
